tests/security/taintThroughChildConstructorWithoutMethodOverride/output.txt
ERROR: TaintedData - input.hack:17:6 - Detected tainted HTML tags